Details
-
Bug
-
Status: Closed
-
P3: Somewhat important
-
Resolution: Done
-
Qt Creator 2.1.0-rc1, Qt Creator 2.2.0
-
4792715f205036f94b61aba3c582c0cff0d722bf
Description
When building a Symbian project in Creator, if the source and SDK are on different drives it will error: "The Symbian SDK and the project sources must reside on the same drive"
This was a restriction with abld, but does not apply when building with Raptor (sbsv2). If source is in X:\src and SDK is in Y:\sdk then sbs needs to be invoked with something like:
sbs -b X:\src\bld.inf -c armv5_urel
EPOCROOT should be set to Y:\sdk\ ie complete with drive letter. Providing that both the -b option and the EPOCROOT specify absolute paths I don't think it matters what directory sbs is invoked from. If EPOCROOT is without drive letter then SBS's cwd should be on the same drive as the SDK.
You can test the issue even if you only have 1 drive by substing the SDK to a new drive letter. Eg for an SDK in C:\QtSymbianSDK\Symbian\SDKs\Symbian3Qt471, do:
subst S: C:\QtSymbianSDK\Symbian\SDKs\Symbian3Qt471
then set S:\ as the S60 SDK path in the Creator options.