Symbian: Allow for EPOCROOT and project to be on different drives

Allow for EPOCROOT and the project to be on different drives when
using SBSv2.

Task-number: QTCREATORBUG-3781